2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-env.h: Prototype for pkl_env_lookup_type.
	* libpoke/pkl-env.c (pkl_env_lookup_type): New function.
	* libpoke/pkl-ops.def: New unary operator SIZEOF.
	* libpoke/pkl-rt-2.pk: Define PK_TYPE_* values.
	(Type): New struct type.
	(Type_Integral): Likewise.
	(Type_Offset): Likewise.
	* libpoke/pkl-tab.y: New token TYPEOF.
	(expression): Rule for typeof.
	* libpoke/pkl-lex.l: Handle token TYPEOF.
	* libpoke/pkl-typify.c (pkl_typify1_pr_op_typeof): New handler.
	(pkl_phase_typify1): Register handler.
	* libpoke/pkl-gen.h (PKL_GEN_CTX_IN_TYPIFIER): Define.
	* libpoke/pkl-gen.c (pkl_phase_gen_or_typeof): New handler.
	(pkl_phase_gen): Register handler.
	(pkl_gen_ps_type_integral): Handle IN_TYPIFIER.
	(pkl_gen_pr_type_offset): Likewise.
	(pkl_gen_ps_type_string): Likewise.
	* libpoke/pkl-gen.pks (integral_typifier): New macro.
	(offset_typifier): Likewise.
	(string_typifier): Likewise.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Check that every .function has a prolog
	instruction.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/poke-dark.css: Renamed from poke-default.css.
	* etc/poke-bright.css: New file.
	* etc/Makefile.am (dist_pkgdata_DATA): Rename poke-dar.css and add
	poke-bright.css.
	* poke/poke.c (print_help): Add --help output for --style-dark and
	--style-bright.
	* poke/pk-term.c (pk_term_init): Use poke-dark.css or
	poke-bright.css depending on the default setting.
	* doc/poke.texi (Invoking poke): Document --style-dark and
	--style-bright.

2022-01-21  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/cast-any-to-function-diag-1.pk: Update
	expected error.
	* testsuite/poke.pkl/cast-void-diag-1.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-3.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-2.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-1.pk: Likewise.
	* testsuite/poke.pkl/cast-str-diag-1.pk: Likewise.