@@ -916,6 +916,7 @@ pkl_ast_node pkl_ast_make_func_type_arg (pkl_ast ast,
 #define PKL_AST_TYPE_S_INTEGRATOR(AST) ((AST)->type.val.sct.closures[5])
 #define PKL_AST_TYPE_S_FORMATER(AST) ((AST)->type.val.sct.closures[6])
 #define PKL_AST_TYPE_S_DEINTEGRATOR(AST) ((AST)->type.val.sct.closures[7])
+#define PKL_AST_TYPE_S_TYPIFIER(AST) ((AST)->type.val.sct.closures[8])
 #define PKL_AST_TYPE_S_ITYPE(AST) ((AST)->type.val.sct.itype)
 #define PKL_AST_TYPE_O_UNIT(AST) ((AST)->type.val.off.unit)
 #define PKL_AST_TYPE_O_BASE_TYPE(AST) ((AST)->type.val.off.base_type)
@@ -964,8 +965,9 @@ struct pkl_ast_type
       union pkl_ast_node *itype;
       int pinned_p;
       int union_p;
-      /* Uncollectable array for MAPPER, WRITER, CONSTRUCTOR, COMPARATOR,
-         INTEGRATOR, DEINTEGRATOR, PRINTER and FORMATER.  */
+      /* Uncollectable array for MAPPER, WRITER, CONSTRUCTOR,
+         COMPARATOR, INTEGRATOR, DEINTEGRATOR, PRINTER, FORMATER, and
+         TYPIFIER.  */
       pvm_val *closures;
     } sct;
 
